Parameterize pdf_backend
Signed-off-by: Fabiano Franz <contact@fabianofranz.com>

--- a/docling_pipeline.yaml
+++ b/docling_pipeline.yaml
@@ -2,6 +2,7 @@
 # Name: convert-pipeline
 # Inputs:
 #    num_splits: int [Default: 3.0]
+#    pdf_backend: str [Default: 'dlparse_v4']
 components:
   comp-create-pdf-splits:
     executorLabel: exec-create-pdf-splits
@@ -27,6 +28,8 @@ components:
             schemaTitle: system.Artifact
             schemaVersion: 0.0.1
       parameters:
+        pdf_backend:
+          parameterType: STRING
         pdf_split:
           parameterType: LIST
     outputDefinitions:
@@ -48,6 +51,8 @@ components:
               input_path:
                 componentInputArtifact: pipelinechannel--import-test-pdfs-output_path
             parameters:
+              pdf_backend:
+                componentInputParameter: pipelinechannel--pdf_backend
               pdf_split:
                 componentInputParameter: pipelinechannel--create-pdf-splits-Output-loop-item
           taskInfo:
@@ -63,6 +68,8 @@ components:
           parameterType: LIST
         pipelinechannel--create-pdf-splits-Output-loop-item:
           parameterType: LIST
+        pipelinechannel--pdf_backend:
+          parameterType: STRING
   comp-import-test-pdfs:
     executorLabel: exec-import-test-pdfs
     outputDefinitions:
@@ -99,10 +106,10 @@ deploymentSpec:
 
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
-          \ *\n\ndef create_pdf_splits(\n    input_path: dsl.InputPath(\"Directory\"\
-          ),\n    num_splits: int,\n) -> List[List[str]]:\n    import pathlib\n\n\
-          \    # Split our entire directory of pdfs into n batches, where n == num_splits\n\
-          \    all_pdfs = [path.name for path in pathlib.Path(input_path).glob(\"\
+          \ *\n\ndef create_pdf_splits(\n    input_path: dsl.Input[dsl.Artifact],\n\
+          \    num_splits: int,\n) -> List[List[str]]:\n    import pathlib\n\n   \
+          \ # Split our entire directory of pdfs into n batches, where n == num_splits\n\
+          \    all_pdfs = [path.name for path in pathlib.Path(input_path.path).glob(\"\
           *.pdf\")]\n    splits = [all_pdfs[i::num_splits] for i in range(num_splits)]\n\
           \    return splits\n\n"
         image: python:3.11
@@ -132,18 +139,33 @@ deploymentSpec:
 
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
-          \ *\n\ndef docling_convert(\n    input_path: dsl.InputPath(\"Directory\"\
-          ),\n    pdf_split: List[str],\n    output_path: dsl.OutputPath(\"Directory\"\
-          ),\n):\n    import pathlib\n    import os\n\n    from docling_core.types.doc\
-          \ import ImageRefMode\n    from docling.datamodel.base_models import ConversionStatus,\
-          \ InputFormat\n    from docling.datamodel.pipeline_options import PdfPipelineOptions\n\
-          \    from docling.document_converter import DocumentConverter, PdfFormatOption\n\
-          \n    input_path = pathlib.Path(input_path)\n    output_path = pathlib.Path(output_path)\n\
-          \    output_path.mkdir(parents=True, exist_ok=True)\n\n    input_pdfs =\
-          \ [input_path / name for name in pdf_split]\n\n    pipeline_options = PdfPipelineOptions()\n\
-          \    pipeline_options.generate_page_images = True\n\n    doc_converter =\
-          \ DocumentConverter(\n        format_options={\n            InputFormat.PDF:\
-          \ PdfFormatOption(pipeline_options=pipeline_options)\n        }\n    )\n\
+          \ *\n\ndef docling_convert(\n    input_path: dsl.Input[dsl.Artifact],\n\
+          \    pdf_split: List[str],\n    pdf_backend: str,\n    output_path: dsl.Output[dsl.Artifact],\n\
+          ):\n    import pathlib\n    import os\n    from importlib import import_module\n\
+          \n    from docling_core.types.doc.base import ImageRefMode\n    from docling.datamodel.base_models\
+          \ import ConversionStatus, InputFormat\n    from docling.datamodel.pipeline_options\
+          \ import PdfPipelineOptions, PdfBackend\n    from docling.document_converter\
+          \ import DocumentConverter, PdfFormatOption\n\n    input_path = pathlib.Path(input_path.path)\n\
+          \    output_path = pathlib.Path(output_path.path)\n    output_path.mkdir(parents=True,\
+          \ exist_ok=True)\n\n    input_pdfs = [input_path / name for name in pdf_split]\n\
+          \n    pipeline_options = PdfPipelineOptions()\n    pipeline_options.generate_page_images\
+          \ = True\n\n    # Validate and resolve backend class from provided string\
+          \ using PdfBackend enum\n    allowed_backends = {e.value for e in PdfBackend}\n\
+          \    if pdf_backend not in allowed_backends:\n        raise ValueError(\n\
+          \            f\"Invalid pdf_backend: {pdf_backend}. Must be one of {sorted(allowed_backends)}\"\
+          \n        )\n\n    backend_to_impl = {\n        PdfBackend.PYPDFIUM2.value:\
+          \ (\n            \"docling.backend.pypdfium2_backend\",\n            \"\
+          PyPdfiumDocumentBackend\",\n        ),\n        PdfBackend.DLPARSE_V1.value:\
+          \ (\n            \"docling.backend.docling_parse_backend\",\n          \
+          \  \"DoclingParseDocumentBackend\",\n        ),\n        PdfBackend.DLPARSE_V2.value:\
+          \ (\n            \"docling.backend.docling_parse_v2_backend\",\n       \
+          \     \"DoclingParseV2DocumentBackend\",\n        ),\n        PdfBackend.DLPARSE_V4.value:\
+          \ (\n            \"docling.backend.docling_parse_v4_backend\",\n       \
+          \     \"DoclingParseV4DocumentBackend\",\n        ),\n    }\n\n    module_name,\
+          \ class_name = backend_to_impl[pdf_backend]\n\n    backend_class = getattr(import_module(module_name),\
+          \ class_name)\n\n    doc_converter = DocumentConverter(\n        format_options={\n\
+          \            InputFormat.PDF: PdfFormatOption(\n                pipeline_options=pipeline_options,\n\
+          \                backend=backend_class,\n            )\n        }\n    )\n\
           \n    conv_results = doc_converter.convert_all(\n        input_pdfs,\n \
           \       raises_on_error=True,\n    )\n\n    for conv_res in conv_results:\n\
           \        # TODO: handle errors, record success/failure somewhere - via\n\
@@ -181,13 +203,13 @@ deploymentSpec:
 
           '
         - "\nimport kfp\nfrom kfp import dsl\nfrom kfp.dsl import *\nfrom typing import\
-          \ *\n\ndef import_test_pdfs(\n    output_path: dsl.OutputPath(\"Directory\"\
-          ),\n):\n    import os\n    import shutil\n    from git import Repo\n\n \
-          \   docling_github_repo = \"https://github.com/docling-project/docling/\"\
-          \n    full_repo_path = os.path.join(output_path, \"docling\")\n    Repo.clone_from(docling_github_repo,\
+          \ *\n\ndef import_test_pdfs(\n    output_path: dsl.Output[dsl.Artifact],\n\
+          ):\n    import os\n    import shutil\n    from git import Repo\n\n    docling_github_repo\
+          \ = \"https://github.com/docling-project/docling/\"\n    full_repo_path\
+          \ = os.path.join(output_path.path, \"docling\")\n    Repo.clone_from(docling_github_repo,\
           \ full_repo_path, branch=\"v2.43.0\")\n\n    # Copy some tests pdf up to\
           \ the root of our output folder\n    pdfs_path = os.path.join(full_repo_path,\
-          \ \"tests\", \"data\", \"pdf\")\n    shutil.copytree(pdfs_path, output_path,\
+          \ \"tests\", \"data\", \"pdf\")\n    shutil.copytree(pdfs_path, output_path.path,\
           \ dirs_exist_ok=True)\n\n    # Delete the rest of the docling repo, leaving\
           \ only the PDFs\n    shutil.rmtree(full_repo_path)\n\n"
         image: python:3.11
@@ -231,6 +253,8 @@ root:
               taskOutputParameter:
                 outputParameterKey: Output
                 producerTask: create-pdf-splits
+            pipelinechannel--pdf_backend:
+              componentInputParameter: pdf_backend
         parameterIterator:
           itemInput: pipelinechannel--create-pdf-splits-Output-loop-item
           items:
@@ -250,5 +274,9 @@ root:
         defaultValue: 3.0
         isOptional: true
         parameterType: NUMBER_INTEGER
+      pdf_backend:
+        defaultValue: dlparse_v4
+        isOptional: true
+        parameterType: STRING
 schemaVersion: 2.1.0
 sdkVersion: kfp-2.14.2
